--- a/index.html
+++ b/index.html
@@ -80,103 +80,92 @@
   </div>
 
   <script>
-    // === CHART SETUP ===
-    const ctx = document.getElementById('myChart').getContext('2d');
-    const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
-    const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
-    let predictionData = [];
+  // === MAIN CHART ===
+  const ctx = document.getElementById('myChart').getContext('2d');
 
-    if (predictorIndex.length > 5) {
-      const recent = predictorIndex.slice(-5).filter(v => v !== null);
-      let last = recent[recent.length - 1];
-      let momentum = (recent[recent.length - 1] - recent[0]) / recent.length;
-      for (let i = 0; i < 24; i++) {
-        last += momentum * (1 + (Math.random() * 0.1 - 0.05));
-        last = Math.min(100, Math.max(0, last));
-        predictionData.push(last);
-      }
-    } else {
-      predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
+  const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
+  const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
+  let predictionData = [];
+
+  if (predictorIndex.length > 5) {
+    const recent = predictorIndex.slice(-5).filter(v => v !== null);
+    let last = recent[recent.length - 1];
+    let momentum = (recent[recent.length - 1] - recent[0]) / recent.length;
+    for (let i = 0; i < 24; i++) {
+      last += momentum * (1 + (Math.random() * 0.1 - 0.05));
+      last = Math.min(100, Math.max(0, last));
+      predictionData.push(last);
     }
+  } else {
+    predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
+  }
 
-    const chart = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels: labels,
-        datasets: [
-          { label: 'Flow Cycle Index (Historical)', data: predictorIndex, borderColor: '#58a6ff', tension: 0.2, fill: false },
-          { label: 'Predicted Index (2-Year Forecast)', data: predictionData, borderColor: '#8b949e', borderDash: [5, 5], opacity: 0.6, tension: 0.2, fill: false }
-        ]
+  const chart = new Chart(ctx, {
+    type: 'line',
+    data: {
+      labels: labels,
+      datasets: [
+        { label: 'Flow Cycle Index (Historical)', data: predictorIndex, borderColor: '#58a6ff', tension: 0.2, fill: false },
+        { label: 'Predicted Index (2-Year Forecast)', data: predictionData, borderColor: '#8b949e', borderDash: [5, 5], opacity: 0.6, tension: 0.2, fill: false }
+      ]
+    },
+    options: {
+      responsive: true,
+      maintainAspectRatio: false,
+      scales: {
+        x: { type: 'time', time: { unit: 'month' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 } },
+        y: { min: 0, max: 100 }
       },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        scales: {
-          x: { type: 'time', time: { unit: 'month' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 } },
-          y: { min: 0, max: 100 }
+      plugins: {
+        zoom: {
+          zoom: { wheel: { enabled: true }, pinch: { enabled: true }, mode: 'xy' },
+          pan: { enabled: true, mode: 'xy' }
         },
-        plugins: {
-          zoom: { zoom: { wheel: { enabled: true }, pinch: { enabled: true }, mode: 'xy' }, pan: { enabled: true, mode: 'xy' } },
-          crosshair: { line: { color: '#ffffff33', width: 1 } },
-          tooltip: { mode: 'index', intersect: false }
-        }
-      }
-    });
-
-    // Time scale buttons
-    document.querySelectorAll('.time-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        document.querySelectorAll('.time-btn').forEach(b => b.classList.remove('active'));
-        btn.classList.add('active');
-        const scale = btn.dataset.scale;
-        chart.options.scales.x.time.unit = scale === '15m' ? 'minute' : scale === '1h' ? 'hour' : scale === '4h' ? 'hour' : scale === 'day' ? 'day' : scale === 'month' ? 'month' : 'year';
-        chart.update();
-      });
-    });
-
-    // === LIVE PRICES ===
-    async function fetchLiveData() {
-      try {
-        const response = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
-          headers: { 'x-cg-pro-api-key': 'CG-16CjgPwWeLeNVZnNRmrfXiUz' }
-        });
-        if (!response.ok) throw new Error('API error');
-        const data = await response.json();
-        const pricesDiv = document.getElementById('prices');
-        pricesDiv.innerHTML = '';
-        data.forEach(coin => {
-          const div = document.createElement('div');
-          div.className = 'price-item';
-          div.innerHTML = `
-            <strong>${coin.name}</strong><br>
-            <span style="font-size:1.4em;">$${coin.current_price.toLocaleString()}</span>
-            <span style="color:${coin.price_change_percentage_24h >= 0 ? '#56d364' : '#f85149'};">${coin.price_change_percentage_24h.toFixed(2)}%</span>
-          `;
-          pricesDiv.appendChild(div);
-        });
-      } catch (e) {
-        document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed — refresh</p>';
+        crosshair: {
+          line: { color: '#ffffff33', width: 1 },
+          sync: { enabled: true }
+        },
+        annotation: {
+          annotations: [
+            { type: 'box', xMin: '2026-04', xMax: '2026-07', yMin: 80, yMax: 100, backgroundColor: 'rgba(255,0,0,0.15)', borderColor: 'red' },
+            { type: 'label', content: 'Predicted Top Window', xValue: '2026-05', yValue: 75, backgroundColor: 'red', color: 'white', position: 'end' },
+            { type: 'label', content: 'Bottom', xValue: '2025-11-22', yValue: 5, backgroundColor: 'green', color: 'white', position: 'end' }
+          ]
+        },
+        tooltip: { mode: 'index', intersect: false }
       }
     }
-    fetchLiveData();
+  });
 
-    // === DRAWING TOOL ===
-    let activeTool = 'crosshair';
-    document.querySelectorAll('.tool-icon').forEach(icon => {
-      icon.addEventListener('click', () => {
-        document.querySelectorAll('.tool-icon').forEach(i => i.classList.remove('active'));
-        icon.classList.add('active');
-        activeTool = icon.dataset.tool;
-      });
+  // Time scale buttons
+  document.querySelectorAll('.time-btn').forEach(btn => {
+    btn.addEventListener('click', () => {
+      document.querySelectorAll('.time-btn').forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+      const scale = btn.dataset.scale;
+      chart.options.scales.x.time.unit = scale === '15m' ? 'minute' : scale === '1h' ? 'hour' : scale === '4h' ? 'hour' : scale === 'day' ? 'day' : scale === 'month' ? 'month' : 'year';
+      chart.update();
+      console.log('Time scale changed to:', scale); // Debug
     });
+  });
 
-    // === STATUS ===
-    const statusBadge = document.getElementById('statusBadge');
-    statusBadge.innerHTML = '🟡 WATCHING';
-    statusBadge.style.background = '#ffeb3b';
-    statusBadge.style.color = 'white';
+  // Drawing toolbar
+  let activeTool = 'line';
+  document.querySelectorAll('.tool-icon').forEach(icon => {
+    icon.addEventListener('click', () => {
+      document.querySelectorAll('.tool-icon').forEach(i => i.classList.remove('active'));
+      icon.classList.add('active');
+      activeTool = icon.dataset.tool;
+      console.log('Tool selected:', activeTool); // Debug
+    });
+  });
 
-    document.getElementById('actionAdvice').innerHTML = 'What you should do right now: Hold or buy dips.';
-  </script>
+  // Prices (already working)
+  // Status
+  document.getElementById('statusBadge').innerHTML = '🟡 WATCHING';
+  document.getElementById('statusBadge').style.background = '#ffeb3b';
+  document.getElementById('statusBadge').style.color = 'white';
+  document.getElementById('actionAdvice').innerHTML = 'What you should do right now: Hold or buy dips.';
+</script>
 </body>
 </html>
