--- a/index.html
+++ b/index.html
@@ -83,73 +83,56 @@
   // === MAIN CHART ===
   const ctx = document.getElementById('myChart').getContext('2d');
 
-  const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
-  const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
-  let predictionData = [];
+  // Mock OHLC data for candlesticks (replace with real API later)
+  const candlestickData = [
+    { x: new Date('2025-01-01'), o: 50, h: 60, l: 40, c: 55 },
+    { x: new Date('2025-01-02'), o: 55, h: 70, l: 50, c: 65 },
+    { x: new Date('2025-01-03'), o: 65, h: 75, l: 60, c: 70 },
+    // Add more...
+  ];
 
-  if (predictorIndex.length > 5) {
-    const recent = predictorIndex.slice(-5).filter(v => v !== null);
-    let last = recent[recent.length - 1];
-    let momentum = (recent[recent.length - 1] - recent[0]) / recent.length;
-    for (let i = 0; i < 24; i++) {
-      last += momentum * (1 + (Math.random() * 0.1 - 0.05));
-      last = Math.min(100, Math.max(0, last));
-      predictionData.push(last);
-    }
-  } else {
-    predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
-  }
+  const volumeData = [
+    { x: new Date('2025-01-01'), y: 1000 },
+    { x: new Date('2025-01-02'), y: 1500 },
+    { x: new Date('2025-01-03'), y: 2000 },
+  ];
 
   const chart = new Chart(ctx, {
-    type: 'line',
+    type: 'candlestick', // Requires chartjs-chart-financial plugin
     data: {
-      labels: labels,
       datasets: [
-        { label: 'Flow Cycle Index (Historical)', data: predictorIndex, borderColor: '#58a6ff', tension: 0.2, fill: false },
-        { label: 'Predicted Index (2-Year Forecast)', data: predictionData, borderColor: '#8b949e', borderDash: [5, 5], opacity: 0.6, tension: 0.2, fill: false }
+        { label: 'Price', data: candlestickData },
+        { label: 'Volume', type: 'bar', data: volumeData, yAxisID: 'volume' }
       ]
     },
     options: {
       responsive: true,
       maintainAspectRatio: false,
       scales: {
-        x: { type: 'time', time: { unit: 'month' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 } },
-        y: { min: 0, max: 100 }
+        x: { type: 'time', time: { unit: 'day' } },
+        y: { title: { display: true, text: 'Price' } },
+        volume: { position: 'right', title: { display: true, text: 'Volume' }, grid: { drawOnChartArea: false } }
       },
       plugins: {
-        zoom: {
-          zoom: { wheel: { enabled: true }, pinch: { enabled: true }, mode: 'xy' },
-          pan: { enabled: true, mode: 'xy' }
-        },
-        crosshair: {
-          line: { color: '#ffffff33', width: 1 },
-          sync: { enabled: true }
-        },
+        zoom: { zoom: { wheel: { enabled: true }, pinch: { enabled: true }, mode: 'xy' }, pan: { enabled: true, mode: 'xy' } },
+        crosshair: { line: { color: '#ffffff33', width: 1 } },
         annotation: {
           annotations: [
-            { type: 'box', xMin: '2026-04', xMax: '2026-07', yMin: 80, yMax: 100, backgroundColor: 'rgba(255,0,0,0.15)', borderColor: 'red' },
-            { type: 'label', content: 'Predicted Top Window', xValue: '2026-05', yValue: 70, backgroundColor: 'red', color: 'white', position: 'end' },
-            { type: 'label', content: 'Bottom', xValue: '2025-11-22', yValue: 5, backgroundColor: 'green', color: 'white', position: 'end' }
+            { type: 'line', xMin: new Date('2026-04'), xMax: new Date('2026-07'), yMin: 80, yMax: 100, borderColor: 'red', borderWidth: 2 }
           ]
-        },
-        tooltip: { mode: 'index', intersect: false }
+        }
       }
     }
   });
 
-  // Time scale buttons (only day/month/year for now - no minute/hour errors)
+  // Time scale buttons
   document.querySelectorAll('.time-btn').forEach(btn => {
     btn.addEventListener('click', () => {
       document.querySelectorAll('.time-btn').forEach(b => b.classList.remove('active'));
       btn.classList.add('active');
       const scale = btn.dataset.scale;
-      if (scale === 'day' || scale === 'month' || scale === 'year') {
-        chart.options.scales.x.time.unit = scale;
-        chart.update();
-        console.log('Time scale changed to:', scale);
-      } else {
-        console.log('Granular scales (15m/1h/4h) skipped - no minute data yet');
-      }
+      chart.options.scales.x.time.unit = scale;
+      chart.update();
     });
   });
 
@@ -160,17 +143,17 @@
       document.querySelectorAll('.tool-icon').forEach(i => i.classList.remove('active'));
       icon.classList.add('active');
       activeTool = icon.dataset.tool;
-      console.log('Tool selected:', activeTool);
     });
   });
 
-  // Simple drawing (line only for now)
+  // Simple drawing preview (expand later)
   let drawing = false;
-  let startPoint = null;
+  let startX, startY;
   ctx.canvas.addEventListener('mousedown', e => {
     if (activeTool === 'line') {
       const rect = ctx.canvas.getBoundingClientRect();
-      startPoint = { x: e.clientX - rect.left, y: e.clientY - rect.top };
+      startX = e.clientX - rect.left;
+      startY = e.clientY - rect.top;
       drawing = true;
     }
   });
@@ -178,12 +161,12 @@
   ctx.canvas.addEventListener('mousemove', e => {
     if (!drawing) return;
     const rect = ctx.canvas.getBoundingClientRect();
-    const endPoint = { x: e.clientX - rect.left, y: e.clientY - rect.top };
-    // Preview line
+    const endX = e.clientX - rect.left;
+    const endY = e.clientY - rect.top;
     ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
     ctx.beginPath();
-    ctx.moveTo(startPoint.x, startPoint.y);
-    ctx.lineTo(endPoint.x, endPoint.y);
+    ctx.moveTo(startX, startY);
+    ctx.lineTo(endX, endY);
     ctx.strokeStyle = 'white';
     ctx.lineWidth = 2;
     ctx.stroke();
@@ -193,25 +176,19 @@
     if (!drawing) return;
     drawing = false;
     const rect = ctx.canvas.getBoundingClientRect();
-    const endPoint = { x: e.clientX - rect.left, y: e.clientY - rect.top };
-    // Add permanent line (annotation)
+    const endX = e.clientX - rect.left;
+    const endY = e.clientY - rect.top;
     chart.options.plugins.annotation.annotations.push({
       type: 'line',
-      xMin: startPoint.x,
-      xMax: endPoint.x,
-      yMin: startPoint.y,
-      yMax: endPoint.y,
+      xMin: startX,
+      xMax: endX,
+      yMin: startY,
+      yMax: endY,
       borderColor: 'white',
       borderWidth: 2
     });
     chart.update();
   });
-
-  // Status & advice (already working)
-  document.getElementById('statusBadge').innerHTML = '🟡 WATCHING';
-  document.getElementById('statusBadge').style.background = '#ffeb3b';
-  document.getElementById('statusBadge').style.color = 'white';
-  document.getElementById('actionAdvice').innerHTML = 'What you should do right now: Hold or buy dips.';
 </script>
 </body>
 </html>
